[package]
name = "jquants_rs"
version = "0.1.0"
edition = "2021"
authors = ["eight"]
description = "Unofficial wrapper for jquants api."
license = "MIT"
readme = "README.org"
keywords = ["jquants", "api", "finance", "stock", "market"]
categories = ["API bindings", "Finance" ]



[dependencies]
async-trait = "0.1.80"
reqwest = {version = "0.12.4", features = ["json"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
serde_qs = "0.13.0"
tokio = {version = "1.38.0", features = ["full","macros"]}
trait-variant = "0.1.2"
typed-builder = "0.18.2"
